--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no,scale=1">
     <meta charset="utf-8">
     <title>Memorize 108 Names Amma</title>
-    <link href='http://fonts.googleapis.com/css?family=Source+Code+Pro&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+    <link http='href://fonts.googleapis.com/css?family=Source+Code+Pro&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="amma.css">
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -21,7 +21,13 @@
 <script src="lib.js"></script>
 <script src="amma.js"></script>
 
-<script>
+<script >
+    jQuery(document).ready(function () {
+      jQuery('[data-toggle="offcanvas"]').click(function () {
+        jQuery('.row-offcanvas').toggleClass('active')
+      });
+    });
+
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
             m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
